[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[zest.releaser]
date-format = %%B %%e, %%Y

[flake8]
doctests = yes
max-line-length = 102
extend-ignore = E261,E114,E116,E128,E741,F841
# https://pep8.readthedocs.org/en/latest/intro.html#error-codes
# E261: at least two spaces before inline comment
# E114: indentation is not a multiple of four (comment)
# E116: unexpected indentation (comment)
# E128: continuation line under-indented for visual indent
# E741: do not use variables named 'l', 'O', or 'I'
# F841: local variable ``name`` is assigned to but never used

[isort]
# from X import (
#   a,
#   b,
# )
multi_line_output = 3
include_trailing_comma = true
lines_after_imports = 2
reverse_relative = true
default_section = THIRDPARTY
known_first_party = dozer
# known_third_party = pytest, ...
# skip = filename...
